Fix amount fo formatting